Cleanup redis connection & start ClusterService work